Fix Input Sticking Out

--- a/src/client/components/Button/Button.module.css
+++ b/src/client/components/Button/Button.module.css
@@ -179,6 +179,10 @@
     cursor: not-allowed;
 }
 
+.disabled:hover {
+    scale: 1;
+}
+
 .acceptButton {
     color: #28a745;
     border: 1px solid #28a745;
